--- a/backend/public/recovery.html
+++ b/backend/public/recovery.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.B25zSN-0.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CQllQ-6A.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DRrVvo6B.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DGPTLe6j.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B1WzbXYX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BfJEPAwo.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BeClKW3B.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CnYrAaG9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DlzQYM85.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BuoFF6p2.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.Br5lBl-t.js">
@@ -19,7 +19,7 @@
 			
 			<script>
 				{
-					__sveltekit_gkph4m = {
+					__sveltekit_aqdfiv = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -28,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CQllQ-6A.js"),
-						import("./_app/immutable/entry/app.BeClKW3B.js")
+						import("./_app/immutable/entry/start.DGPTLe6j.js"),
+						import("./_app/immutable/entry/app.CnYrAaG9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
